--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,38 +8,61 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Tajawal:wght@400;700&family=Aref+Ruqaa+Ink:wght@400;700&family=Lateef:wght@400;700&family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        background-color: rgb(244, 246, 245); /* Off-White */
-        color: #1a202c; /* Darkest Charcoal */
+        background-color: #F9F9FB;
+        color: #333333;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
       }
-      /* Custom scrollbar styling for the new light theme */
+      /* Custom class for applying the Arabic font */
+      .font-arabic {
+        font-family: 'Tajawal', sans-serif;
+      }
+      /* Custom classes for stylized signatures */
+      .font-signature-aref {
+        font-family: 'Aref Ruqaa Ink', serif;
+      }
+      .font-signature-lateef {
+        font-family: 'Lateef', serif;
+      }
+      .font-signature-scheherazade {
+        font-family: 'Scheherazade New', serif;
+      }
+      /* Custom scrollbar styling */
       .custom-scrollbar::-webkit-scrollbar {
         width: 8px;
+        height: 8px;
       }
       .custom-scrollbar::-webkit-scrollbar-track {
-        background: #e2e8f0; 
+        background: #f1f1f1; 
         border-radius: 10px;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: #cbd5e1; 
+        background: #d1d5db; 
         border-radius: 10px;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background: #a0aec0;
+        background: #9ca3af;
       }
-      /* Styles for diff view in the new light theme */
+      /* Refined styles for diff view */
       ins {
-        background-color: rgba(255, 165, 0, 0.2); /* Subtle Orange */
-        color: #1a202c;
+        background-color: rgba(234, 88, 12, 0.1); /* Desaturated Orange */
+        color: #333;
         text-decoration: none;
+        border-radius: 3px;
+        padding: 0 2px;
       }
       del {
-        background-color: rgba(235, 100, 55, 0.15); /* Subtle Orange-Red */
-        color: #718096;
+        background-color: rgba(220, 38, 38, 0.1); /* Desaturated Red */
+        color: #777;
         text-decoration: line-through;
+        text-decoration-color: rgba(220, 38, 38, 0.6);
+        text-decoration-thickness: 1.5px;
+        border-radius: 3px;
+        padding: 0 2px;
       }
     </style>
   <script type="importmap">
